--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <h1>
-            Hello World!
+            Hello World!!
         </h1>
         <script src="../js/library/aos/aos.js"></script>
         <script src="../js/main.js" type="type/module" defer></script>
