--- a/html/index.html
+++ b/html/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link
-            rel="shortcut icon"
-            href
-            type="image/x-icon" />
-        <!-- Link CSS -->
-        <link rel="stylesheet" href="../css/style.css">
-        <!-- Link JS -->
-        <script src="../js/library/jquery/jquery-min.js"></script>
-        <!-- Link Favicon -->
-
-        <title>Index</title>
-    </head>
-    <body>
-        <h1>
-            Hello World!!
-        </h1>
-        <script src="../js/library/aos/aos.js"></script>
-        <script src="../js/main.js" type="type/module" defer></script>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <link rel="stylesheet" href="/css/style.css">
+  <title>Porfolio</title>
+  <body>
+    <script src="../js/main.js"> </script>
+  </body>
 </html>
